fix: update generic modal icons of close and spacing

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -9,7 +9,7 @@
   @apply fixed top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%]
 }
 .modal {
-  @apply bg-[#E9F7FF] p-4 rounded-md mx-auto my-auto min-w-[480px] max-h-[85vh] overflow-y-scroll;
+  @apply bg-[#E9F7FF] p-4 rounded-md mx-auto my-auto min-w-[480px] max-h-[85vh] overflow-y-auto;
 }
 .header {
   @apply flex justify-between items-center;
@@ -18,7 +18,7 @@
   @apply hover:cursor-pointer;
 }
 .hr {
-  @apply text-[#00283D] my-2
+  @apply text-[#00283D] my-2 opacity-20;
 }
 .title {
   @apply font-bold text-lg;
